--- a/style.css
+++ b/style.css
@@ -1,21 +1,13 @@
-body, html {
-	background-color: white;
+body {
+	background-color: black;
+	color: white;
 	font-family: "Trebuchet MS", Helvetica, sans-serif;
-	margin: 0;
-	font-size: 14pt;
-	height: 100%;
 }
-.home_container {
-	background-position: left top;
-	background-image: url('./assets/uyuni.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-}
-.parallax {
-    background-image: url('./assets/uyuni.jpg');
-    height: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+iframe {
+    display: block;
+    border: none;
+    height: 100vh;
+    width: 50vw;
+    margin-right: auto;
+    margin-left: auto;
 }
